--- a/data/templates/modelDescription.xml.in
+++ b/data/templates/modelDescription.xml.in
@@ -4,8 +4,8 @@
     modelName="no.sintef.dds-fmu"
     description="DDS-FMI inter-communication"
     author="Joakim Haugen and Stian Skjong"
-    copyright="Copyright 2023-2023, SINTEF Ocean"
-    license="3-Clause BSD license"
+    copyright="© 2023 SINTEF Ocean"
+    license="BSD-3-Clause"
     version="@CMAKE_PROJECT_VERSION@"
     guid="@FMU_UUID@"
     variableNamingConvention="structured"
