Work on tidying up temporary stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,6 @@ message(STATUS "dds-fmu: Option DDSFMU_WITH_TOOLS = ${DDSFMU_WITH_TOOLS}")
 find_package(cppfmu CONFIG REQUIRED)
 find_package(fastdds CONFIG REQUIRED)
 find_package(xtypes CONFIG REQUIRED)
-find_package(ryml CONFIG REQUIRED)
 find_package(rapidxml REQUIRED CONFIG)
 find_package(stduuid CONFIG REQUIRED)
 
@@ -95,15 +94,59 @@ add_library(${fmuModuleTarget} MODULE
 
 target_link_libraries(${fmuModuleTarget}
   PUBLIC cppfmu::cppfmu fastdds::fastrtps
-  PRIVATE configurator helper # TODO add more here
+  PRIVATE configurator detail
   )
 
 target_include_directories(${fmuModuleTarget}
   PRIVATE
-  $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/src/temporary>
   $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/temp>
   )
 
+add_library(configurator OBJECT
+  "${CMAKE_SOURCE_DIR}/src/configurator/auxiliaries.cpp"
+  "${CMAKE_SOURCE_DIR}/src/configurator/model-descriptor.cpp"
+  )
+
+target_link_libraries(configurator
+  PUBLIC
+  eprosima::xtypes
+  rapidxml::rapidxml
+  PRIVATE
+  "$<$<AND:$<CXX_COMPILER_ID:GNU>,$<VERSION_LESS:$<CXX_COMPILER_VERSION>,9.1>>:-lstdc++fs>"
+  "$<$<AND:$<CXX_COMPILER_ID:Clang>,$<VERSION_LESS:$<CXX_COMPILER_VERSION>,9.0>>:-lc++fs>"
+  stduuid::stduuid)
+
+target_include_directories(configurator
+  PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/src/configurator>)
+
+
+add_library(detail OBJECT
+  ${CMAKE_SOURCE_DIR}/src/detail/Converter.cpp
+  ${CMAKE_SOURCE_DIR}/src/detail/DynamicPubSub.cpp
+  ${CMAKE_SOURCE_DIR}/src/detail/SignalDistributor.cpp
+  ${CMAKE_SOURCE_DIR}/src/detail/DataMapper.cpp
+  )
+
+target_link_libraries(detail
+  PUBLIC
+    eprosima::xtypes
+    fastdds::fastrtps
+    configurator
+  PRIVATE
+    rapidxml::rapidxml
+    "$<$<AND:$<CXX_COMPILER_ID:GNU>,$<VERSION_LESS:$<CXX_COMPILER_VERSION>,9.1>>:-lstdc++fs>"
+    "$<$<AND:$<CXX_COMPILER_ID:Clang>,$<VERSION_LESS:$<CXX_COMPILER_VERSION>,9.0>>:-lc++fs>"
+  )
+
+target_include_directories(detail
+  PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/src/detail>)
+
+
+# TODO: merge executables and create sub commands instead
+
+# Target: Executable tool repacker
 add_executable(${fmuRepackerTarget}
   ${CMAKE_SOURCE_DIR}/src/repacker/repacker.cpp)
 
@@ -115,6 +158,7 @@ target_link_libraries(${fmuRepackerTarget}
   "$<$<AND:$<CXX_COMPILER_ID:Clang>,$<VERSION_LESS:$<CXX_COMPILER_VERSION>,9.0>>:-lc++fs>"
   )
 
+# Target: Executable tool descriptor
 add_executable(${fmuDescriptorTarget}
   ${CMAKE_SOURCE_DIR}/src/descriptor/descriptor.cpp)
 
@@ -122,11 +166,10 @@ target_link_libraries(${fmuDescriptorTarget}
   PRIVATE
   taywee::args
   configurator
-  helper
+  detail
   "$<$<AND:$<CXX_COMPILER_ID:GNU>,$<VERSION_LESS:$<CXX_COMPILER_VERSION>,9.1>>:-lstdc++fs>"
   "$<$<AND:$<CXX_COMPILER_ID:Clang>,$<VERSION_LESS:$<CXX_COMPILER_VERSION>,9.0>>:-lc++fs>"
   )
-
 
 # Target: stage FMU contents phase 1
 add_custom_target(${fmuStagingTarget}_1
@@ -148,7 +191,6 @@ add_custom_target(${fmuStagingTarget}_2
   COMMENT "FMU staging: Populate FMU contents in staging directory"
   VERBATIM
   )
-
 
 if(NOT DDSFMU_WITH_TOOLS)
 
@@ -184,100 +226,18 @@ if(BUILD_TESTING)
     add_fmu_compliance_check("'${fmuName}'_is_compliant" "${fmuOutputFile}")
 endif()
 
-source_group("Metadata" REGULAR_EXPRESSION "modelDescription.xml")
-set_target_properties(${fmuGuidTarget} PROPERTIES FOLDER ${fmuName})
-set_target_properties(${fmuModuleTarget} PROPERTIES PROJECT_LABEL "${fmuName}-lib")
-set_target_properties(${fmuModuleTarget} PROPERTIES FOLDER ${fmuName})
-set_target_properties(${fmuRepackerTarget} PROPERTIES FOLDER ${fmuName})
-set_target_properties(${fmuStagingTarget}_1 PROPERTIES FOLDER ${fmuName})
-set_target_properties(${fmuStagingTarget}_2 PROPERTIES FOLDER ${fmuName})
-set_target_properties(${fmuArchiveTarget} PROPERTIES FOLDER ${fmuName})
-
-
-add_library(helper OBJECT
-  ${CMAKE_SOURCE_DIR}/src/helper/Converter.cpp
-  ${CMAKE_SOURCE_DIR}/src/helper/DynamicPubSub.cpp
-  ${CMAKE_SOURCE_DIR}/src/helper/DynamicPublisher.cpp
-  ${CMAKE_SOURCE_DIR}/src/helper/DynamicSubscriber.cpp
-  ${CMAKE_SOURCE_DIR}/src/helper/DdsLoader.cpp
-  ${CMAKE_SOURCE_DIR}/src/helper/SignalDistributor.cpp
-  ${CMAKE_SOURCE_DIR}/src/helper/DataMapper.cpp
-  )
-
-target_link_libraries(helper
-  PUBLIC
-    eprosima::xtypes
-    fastdds::fastrtps
-    configurator
-  PRIVATE
-    rapidxml::rapidxml
-    "$<$<AND:$<CXX_COMPILER_ID:GNU>,$<VERSION_LESS:$<CXX_COMPILER_VERSION>,9.1>>:-lstdc++fs>"
-    "$<$<AND:$<CXX_COMPILER_ID:Clang>,$<VERSION_LESS:$<CXX_COMPILER_VERSION>,9.0>>:-lc++fs>"
-  )
-
-target_include_directories(helper
-  PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/src/helper>)
-
 
 if(DDSFMU_WITH_DOC)
   add_subdirectory(docs)
 endif()
 
 
-
-# Temporary targets
-add_library(configurator OBJECT
-  "${CMAKE_SOURCE_DIR}/src/configurator/auxiliaries.cpp"
-  "${CMAKE_SOURCE_DIR}/src/configurator/idl-loader.cpp"
-  "${CMAKE_SOURCE_DIR}/src/configurator/model-descriptor.cpp"
-  )
-
-target_link_libraries(configurator
-  PUBLIC
-  eprosima::xtypes
-  rapidxml::rapidxml
-  PRIVATE
-  "$<$<AND:$<CXX_COMPILER_ID:GNU>,$<VERSION_LESS:$<CXX_COMPILER_VERSION>,9.1>>:-lstdc++fs>"
-  "$<$<AND:$<CXX_COMPILER_ID:Clang>,$<VERSION_LESS:$<CXX_COMPILER_VERSION>,9.0>>:-lc++fs>"
-  stduuid::stduuid)
-
-target_include_directories(configurator
-  PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/src/configurator>)
-
-
-add_library(trigs OBJECT
-  "${CMAKE_CURRENT_SOURCE_DIR}/src/temporary/trig/trig.cxx"
-  "${CMAKE_CURRENT_SOURCE_DIR}/src/temporary/trig/trigPubSubTypes.cxx"
-  "${CMAKE_CURRENT_SOURCE_DIR}/src/temporary/trig/TrigPublisher.cpp"
-  "${CMAKE_CURRENT_SOURCE_DIR}/src/temporary/trig/TrigSubscriber.cpp"
-)
-
-target_link_libraries(trigs fastdds::fastrtps)
-
-target_include_directories(trigs
-  PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/src/temporary/trig>)
-
-add_executable(myuuid ${CMAKE_SOURCE_DIR}/src/temporary/executables/myuuid.cpp)
-target_link_libraries(myuuid configurator taywee::args)
-
-add_executable(trigga "${CMAKE_CURRENT_SOURCE_DIR}/src/temporary/executables/trigga.cpp")
-target_include_directories(trigga PRIVATE $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/temp>)
-target_link_libraries(trigga trigs fastdds::fastrtps)
-
-add_executable(xplora "${CMAKE_CURRENT_SOURCE_DIR}/src/temporary/executables/xplora.cpp")
-target_link_libraries(xplora configurator)
-
-add_executable(modeler "${CMAKE_CURRENT_SOURCE_DIR}/src/temporary/executables/modeler.cpp")
-target_link_libraries(modeler configurator)
-
-add_executable(pubdyntop "${CMAKE_SOURCE_DIR}/src/temporary/executables/pubdyntop.cpp")
-target_link_libraries(pubdyntop fastdds::fastrtps rapidxml::rapidxml)
-
-add_executable(subdyntop "${CMAKE_SOURCE_DIR}/src/temporary/executables/subdyntop.cpp")
-target_link_libraries(subdyntop fastdds::fastrtps rapidxml::rapidxml)
-
-add_executable(structuriser "${CMAKE_SOURCE_DIR}/src/temporary/executables/structuriser.cpp")
-target_link_libraries(structuriser configurator)
+source_group("Metadata" REGULAR_EXPRESSION "modelDescription.xml")
+set_target_properties(${fmuGuidTarget} PROPERTIES FOLDER ${fmuName})
+set_target_properties(${fmuModuleTarget} PROPERTIES PROJECT_LABEL "${fmuName}-lib")
+set_target_properties(${fmuModuleTarget} PROPERTIES FOLDER ${fmuName})
+set_target_properties(${fmuRepackerTarget} PROPERTIES FOLDER ${fmuName})
+set_target_properties(${fmuDescriptorTarget} PROPERTIES FOLDER ${fmuName})
+set_target_properties(${fmuStagingTarget}_1 PROPERTIES FOLDER ${fmuName})
+set_target_properties(${fmuStagingTarget}_2 PROPERTIES FOLDER ${fmuName})
+set_target_properties(${fmuArchiveTarget} PROPERTIES FOLDER ${fmuName})
