--- a/data/templates/modelDescription.xml.in
+++ b/data/templates/modelDescription.xml.in
@@ -17,4 +17,11 @@
         canHandleVariableCommunicationStepSize="true"
         />
 
+    <DefaultExperiment
+        startTime="0"
+        stopTime="1"
+        tolerance="1e-3"
+        stepSize="0.1"
+        />
+
 </fmiModelDescription>
