--- a/data/templates/config.hpp.in
+++ b/data/templates/config.hpp.in
@@ -1,5 +1,3 @@
 #include <string>
 
-static inline std::string ddsfmu_version(){
-  return std::string("@CMAKE_PROJECT_VERSION@");
-}
+static inline std::string ddsfmu_version() { return std::string("@CMAKE_PROJECT_VERSION@"); }
