--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -38,8 +38,8 @@ set(DOXYGEN_PROJECT_NAME ${CMAKE_PROJECT_NAME})
 #set(DOXYGEN_PROJECT_LOGO "${CMAKE_CURRENT_SOURCE_DIR}/images/ddsfmu_logo.png")
 
 list(APPEND DOXYGEN_EXAMPLE_PATH "${CMAKE_SOURCE_DIR}/examples")
-set(DOXYGEN_EXTRACT_ALL NO)
-set(DOXYGEN_EXTRACT_PRIVATE YES)
+set(DOXYGEN_EXTRACT_ALL YES)
+set(DOXYGEN_EXTRACT_PRIVATE NO)
 set(DOXYGEN_GENERATE_TAGFILE "${CMAKE_CURRENT_BINARY_DIR}/html/${CMAKE_PROJECT_NAME}.tag")
 set(DOXYGEN_HIDE_UNDOC_CLASSES NO)
 set(DOXYGEN_HIDE_UNDOC_MEMBERS YES)
