--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -18,7 +18,7 @@ target_link_libraries(unit-tests
   eprosima::xtypes
   fastdds::fastrtps
   detail
-  configurator
+  configuration
   )
 
 gtest_discover_tests(unit-tests
