Add documentation source code and images

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -43,7 +43,7 @@ set(DOXYGEN_EXTRACT_PRIVATE NO)
 set(DOXYGEN_GENERATE_TAGFILE "${CMAKE_CURRENT_BINARY_DIR}/html/${CMAKE_PROJECT_NAME}.tag")
 set(DOXYGEN_HIDE_UNDOC_CLASSES NO)
 set(DOXYGEN_HIDE_UNDOC_MEMBERS YES)
-set(DOXYGEN_IMAGE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/images")
+set(DOXYGEN_IMAGE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/pdf")
 #list(APPEND DOXYGEN_DOTFILE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/dot")
 set(DOXYGEN_RECURSIVE YES)
 set(DOXYGEN_REPEAT_BRIEF NO)
@@ -51,6 +51,8 @@ set(DOXYGEN_SHOW_FILES NO)
 set(DOXYGEN_SHOW_USED_FILES NO)
 set(DOXYGEN_USE_MATHJAX YES)
 set(DOXYGEN_USE_MDFILE_AS_MAINPAGE "${CMAKE_CURRENT_SOURCE_DIR}/index.md")
+
+list(APPEND DOXYGEN_CITE_BIB_FILES "${CMAKE_CURRENT_SOURCE_DIR}/user/bibs.bib")
 
 set(DOXYGEN_WARN_IF_UNDOCUMENTED NO)
 
