--- a/data/templates/modelDescription.xml.in
+++ b/data/templates/modelDescription.xml.in
@@ -15,6 +15,7 @@
     <CoSimulation
         modelIdentifier="dds-fmu"
         canHandleVariableCommunicationStepSize="true"
+        canNotUseMemoryManagementFunctions="true"
         />
 
     <DefaultExperiment
