Add some @key annotation support
  This is a major extension to support key annotation in the IDL specification. The
  implementation adds the possibility of filtering subscribed topics based on key member
  values. Currently, the filtering is only tested for simple key members, like primitive
  types, strings and enumerations. The user can specify values for the keys through FMU
  parameters and runtime. This implementation does not yet support filtering on keys in
  nested structures.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,7 +94,7 @@ add_custom_target(
 # Target: build module library
 add_library(${fmuModuleTarget} MODULE
   ${fmuSourceFiles}
-  ${CPPFMU_ROOT}/src/fmi_functions.cpp
+  ${cppfmu_PACKAGE_FOLDER_DEBUG}${cppfmu_PACKAGE_FOLDER_RELEASE}/src/fmi_functions.cpp
   )
 
 target_link_libraries(${fmuModuleTarget}
