--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,11 +3,28 @@ include(GoogleTest)
 
 add_executable(unit-tests RunTests.cpp
   dynamic_pubsub.cpp
+  keyed_members.cpp
   model_description.cpp
   pubsub_procedure.cpp
   visitors.cpp
   xtypes.cpp
+  hello_pubsub.cpp
 )
+
+add_executable(hello-test hello_main.cpp
+  hello_pubsub.cpp)
+
+target_include_directories(hello-test
+  PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
+
+target_link_libraries(hello-test
+  eprosima::xtypes
+  fastdds::fastrtps
+  detail
+  configuration
+  filesystem::libs
+  )
 
 target_include_directories(unit-tests
   PUBLIC
